--- a/dashboard-gameStack/package.json
+++ b/dashboard-gameStack/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "formik": "^2.4.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
