--- a/dashboard-gameStack/package.json
+++ b/dashboard-gameStack/package.json
@@ -11,6 +11,8 @@
     "start": "serve dist -s -n -L -p $PORT"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "formik": "^2.4.3",
