--- a/dashboard-gameStack/package.json
+++ b/dashboard-gameStack/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
+    "recharts": "^2.7.2",
     "serve": "^14.2.0"
   },
   "devDependencies": {
