--- a/dashboard-gameStack/package.json
+++ b/dashboard-gameStack/package.json
@@ -22,16 +22,11 @@
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
-
+    "react-slick": "^0.29.0",
     "recharts": "^2.7.2",
     "serve": "^14.2.0",
-<<<<<<< Updated upstream
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
-
-=======
+    "slick-carousel": "^1.8.1",
     "victory": "^36.6.11"
->>>>>>> Stashed changes
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
