--- a/dashboard-gameStack/package.json
+++ b/dashboard-gameStack/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "serve dist -s -n -L -p $PORT"
+    "start": "npm run dev"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
