--- a/dashboard-gameStack/package.json
+++ b/dashboard-gameStack/package.json
@@ -15,7 +15,6 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
-    "date-fns": "^2.30.0",
     "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,8 +24,7 @@
     "react-slick": "^0.29.0",
     "recharts": "^2.7.2",
     "serve": "^14.2.0",
-    "slick-carousel": "^1.8.1",
-    "victory": "^36.6.11"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
