--- a/dashboard-gameStack/package.json
+++ b/dashboard-gameStack/package.json
@@ -24,7 +24,8 @@
     "react-slick": "^0.29.0",
     "recharts": "^2.7.2",
     "serve": "^14.2.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.7.22"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
